# apps/bot-server/src/dto/duel-settings.dto.ts
@@ -1,8 +1,14 @@
+export interface DuelQuestTargetDto {
+  target: number;
+  rewardCm: number;
+}
+
 export interface DuelSettingsDto {
   id: string;
   minDelta: number;
   maxDelta: number;
   isEnabled: boolean;
+  questTargets: DuelQuestTargetDto[];
   createdAt: Date;
   updatedAt: Date;
 }
